MOBILE NAV BAR ALIGNMENT FIXED !!!

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,18 @@ a {
   display: flex;
 }
 
+.nav-links {
+  display: flex;
+  list-style: none;
+  gap: 20px;
+  margin: 0px, 0px, 1px, 0px;
+  padding: 0px;
+}
+
+.nav-links li a {
+  text-decoration: none;
+}
+
 /* media query for mobile screens */
 @media (max-width: 600px) {
   .clock-title {
@@ -24,5 +36,10 @@ a {
   .app-container {
     display: flex;
     flex-direction: column;
+  }
+
+  .nav-links {
+    gap: 0;
+    justify-content: space-between;
   }
 }
